# p0

./: .dockerignore  .gitignore  .ppoconfig.example  LICENSE  README.md  TODO.md  config.yaml.example  p0-training-colab.ipynb  pyproject.toml
bench/: benchmark_action_time.py  benchmark_compile.py  benchmark_encoder_time.py  benchmark_heuristic_wr.py  benchmark_memory_channel.py  benchmark_observation_time.py  benchmark_policy_wr.py  benchmark_reducer_depth.py  benchmark_runtime_adapters.py
data/: champions_dex.json  runtime_manifest.json  vocab.json
scripts/: cleanup.sh  dump_champions_dex.js  export_training.py  reset_pool.sh  validate_champions_batch.js  validate_champions_team.js
src/: env.py  eval.py  format_config.py  lookups.py  rl_player.py  showdown_server.py
src/heuristic/: heuristic.py  replay_gen.py
src/model/: build_vocab.py  cls_reducer.py  event_builder.py  fused_token_encoder.py  observation_builder.py  policy.py  structured_observation.py  swiglu_encoder.py  tokenizer.py
src/p0/: __init__.py  env.py  format_config.py  paths.py  persistence.py  rl_player.py  showdown_server.py  team_picker.py
src/p0/battle/: __init__.py  actions.py  events.py  legality.py  series.py  views.py
src/p0/cli/: __init__.py  bc.py  build_vocab.py  corpus.py  eval.py  export_training.py  play.py  replays.py  train.py
src/p0/evaluation/: __init__.py  harness.py
src/p0/model/: __init__.py  architecture_contract.py  cls_reducer.py  config.py  event_builder.py  factory.py  fused_token_encoder.py  observation_builder.py  policy.py  resources.py  series_context.py  structured_observation.py  swiglu_encoder.py  tokenizer.py
src/p0/replays/: __init__.py  compile.py  dataset.py  evidence.py  group.py  identity.py  oracle.py  protocol.py  reconstruct.py  schema.py  scrape.py  shards.py
src/p0/runtime/: __init__.py  composition.py  live_event_capture.py  poke_env_action_adapter.py  poke_env_battle_adapter.py  poke_env_patches.py  showdown.py
src/p0/team_data/: __init__.py  team_corpus.py
src/p0/teams/: __init__.py  corpus.py  corpus_build.py  corpus_source.py  source.py  stat_points.py  team.py  validation.py
src/p0/train/: __init__.py  config.py  opponent_pool.py  rollout.py  train_loop.py  utils.py  vec_env.py
src/p0/training/: __init__.py  bc.py  bc_composition.py  checkpoint.py  composition.py  config.py  magnet.py  ppo.py  rollout.py  utils.py  (+3 more)
src/team_data/: stat_points.py  team_corpus.py
src/train/: behaviour_cloning.py  config.py  opponent_pool.py  ppo_utils.py  rollout.py  seed_pool.py  train_loop.py  utils.py  vec_env.py
teams/: aerodactyl.txt  charizardy.txt  floette.txt  froslass.txt  tyranitar.txt  venusaur.txt
tests/: benchmark_encoder.py  conftest.py  test_artifacts.py  test_backward_pass.py  test_battle_boundaries.py  test_bc_objectives.py  test_bc_pipeline.py  test_bc_trainer.py  test_benchmark_reducer_depth.py  test_candidate_scoring.py  test_checkpoint3_services.py  test_compile_integration.py  test_config.py  test_corpus_cli_and_composition.py  test_env.py  test_evaluation.py  test_event_builder.py  test_format_config.py  test_forward_pass.py  test_gradient_flow.py  test_live_policy_battle.py  test_magnet.py  test_memory_channel_contract.py  test_observation.py  test_operational_bc_pipeline.py  test_opponent_pool.py  test_replay_dataset.py  test_replay_pipeline.py  test_replay_shards.py  test_rollout.py  test_series_context.py  test_shared_contracts.py  test_stat_points.py  test_struggle.py  test_team_corpus.py  test_team_corpus_build.py  test_team_corpus_source.py  test_team_sources.py  test_team_validation_batch.py  test_tokenizer.py  (+3 more)
tests/characterization/: test_closed_contracts.py
tests/integration/: test_replay_network.py
(+6 files in other folders)
