[project]
name = "p0"
version = "0.1.0"
description = "A RL agent to play VGC in a competent manner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poke-env==0.11.0",
    "numpy>=1.21.6",
    "gymnasium>=0.26.3",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.11"]
cuda = ["torch>=2.11"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
