[project]
name = "p0"
version = "0.1.0"
description = "A RL agent to play VGC in a competent manner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poke-env==0.15.0",
    "numpy>=1.21.6",
    "gymnasium>=0.26.3",
    "tensorboard>=2.20.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.11"]
cuda = ["torch>=2.11"]

[project.scripts]
p0-train = "p0.cli.train:main"
p0-play = "p0.cli.play:main"
p0-build-vocab = "p0.cli.build_vocab:main"
p0-export-training = "p0.cli.export_training:main"
p0-replays = "p0.cli.replays:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["p0*"]

[tool.setuptools.data-files]
"share/p0" = [
    "data/champions_dex.json",
    "data/runtime_manifest.json",
    "data/vocab.json",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = false
include = ["src/p0", "tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = "-m 'not integration and not network'"
testpaths = ["tests"]
markers = [
    "integration: requires a built local Showdown server",
    "network: requires access to the public replay endpoint",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pyright>=1.1.408",
    "ruff>=0.12.0",
]
